@@ -19,3 +19,4 @@ Andreas Mueller <amueller@ibr.cs.tu-bs.de>
 Bill Fenner <fenner@research.att.com>
 Bill Rizzi <rizzi@softserv.com>
 Ted Soo-Hoo <Ted.Soo-Hoo@pulse.com>
+Niels Baggesen <nba@ericssontelebit.com>
